fix(frontend): 🐛 theme switcher style and spacings

--- a/packages/dev-frontend/src/App.scss
+++ b/packages/dev-frontend/src/App.scss
@@ -1,7 +1,7 @@
 .theme-switcher {
-    justify-self: end;
     position: relative;
     width: 40px;
+    height: 24px;
     display: inline-flex;
     align-items: center;
     margin-left: 20px;
@@ -12,8 +12,6 @@
         bottom: 15px;
         cursor: pointer;
         height: 24px;
-        position: absolute;
-        top: 12px;
         width: 100%
     }
 
@@ -61,23 +59,6 @@
         background-size: 10px 10px;
         content: " ";
         transform: translateX(15px)
-    }
-}
-
-.switcher-header {
-    box-sizing: border-box;
-    margin: 0;
-    min-width: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-inline: clamp(2rem, 100%, 40% - 16rem);
-    height: 38px;
-
-    .switcher-container {
-        display: flex;
-        justify-content: flex-end;
-        height: 100%;
     }
 }
 
